logs/dana.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/dana'...
Compiling './lib/python3.5/site-packages/dana/clock.py'...
***   File "./lib/python3.5/site-packages/dana/clock.py", line 518
    print 'timer 2 called at time %.3f' % time
                                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/dana/connection.py'...
***   File "./lib/python3.5/site-packages/dana/connection.py", line 219
    print C.source == src
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/dana/csr_array.py'...
***   File "./lib/python3.5/site-packages/dana/csr_array.py", line 61
    raise ValueError, "inconsistent shapes"
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dana/declaration.py'...
***   File "./lib/python3.5/site-packages/dana/declaration.py", line 69
    raise DeclarationError, 'Definition is not a declaration'
                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dana/dense_connection.py'...
***   File "./lib/python3.5/site-packages/dana/dense_connection.py", line 70
    raise ConnectionError, \
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dana/diff_equation.py'...
***   File "./lib/python3.5/site-packages/dana/diff_equation.py", line 220
    raise DifferentialEquationError, \
                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dana/equation.py'...
***   File "./lib/python3.5/site-packages/dana/equation.py", line 146
    raise EquationError, 'Definition is not an equation'
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dana/group.py'...
***   File "./lib/python3.5/site-packages/dana/group.py", line 344
    raise TypeError, 'len() of unsized object'
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dana/model.py'...
***   File "./lib/python3.5/site-packages/dana/model.py", line 66
    raise ValueError, \
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dana/network.py'...
***   File "./lib/python3.5/site-packages/dana/network.py", line 105
    raise NetworkError, 'Group is already in network'
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dana/shared_connection.py'...
***   File "./lib/python3.5/site-packages/dana/shared_connection.py", line 81
    raise ConnectionError, \
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dana/sparse_connection.py'...
***   File "./lib/python3.5/site-packages/dana/sparse_connection.py", line 65
    raise ConnectionError, \
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/dana/tests'...
Compiling './lib/python3.5/site-packages/dana/tests/test_link.py'...
***   File "./lib/python3.5/site-packages/dana/tests/test_link.py", line 290
    print G1.V
           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/dana/tests/tools.py'...
***   File "./lib/python3.5/site-packages/dana/tests/tools.py", line 56
    print A
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/dana-0.5.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
